# ChangeLog for sci-biology/rebase
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-biology/rebase/ChangeLog,v 1.65 2006/05/24 20:45:09 hansmi Exp $

  24 May 2006; Michael Hanselmann <hansmi@gentoo.org> rebase-603.ebuild:
  Stable on ppc.

  22 Apr 2006; Markus Rothe <corsair@gentoo.org> rebase-603.ebuild:
  Stable on ppc64

  19 Apr 2006; Olivier Fisette <ribosome@gentoo.org> -rebase-602.ebuild:
  Removed old version.

*rebase-604 (19 Apr 2006)

  19 Apr 2006; Olivier Fisette <ribosome@gentoo.org> -rebase-512.ebuild,
  rebase-603.ebuild, +rebase-604.ebuild:
  New version (604). Removed old version (512). Added 603 to x86.

  08 Apr 2006; Simon Stelling <blubb@gentoo.org> rebase-601-r1:
  stable on amd64

*rebase-603 (15 Mar 2006)

  15 Mar 2006; Olivier Fisette <ribosome@gentoo.org> +rebase-603.ebuild:
  New version.

  22 Feb 2006; Fabian Groffen <grobian@gentoo.org> rebase-601-r1.ebuild:
  Marked ppc-macos stable (bug #123332)

  22 Feb 2006; <nixnut@gentoo.org> rebase-601-r1.ebuild:
  Stable on ppc. bug 123332

  21 Feb 2006; Markus Rothe <corsair@gentoo.org> rebase-601-r1.ebuild:
  Stable on ppc64; bug #123332

  20 Feb 2006; Joshua Jackson <tsunam@gentoo.org> rebase-601-r1.ebuild:
  Stable on x86; bug #123332

*rebase-602 (06 Feb 2006)

  06 Feb 2006; Olivier Fisette <ribosome@gentoo.org> +rebase-602.ebuild:
  New version.

  21 Jan 2006; Olivier Fisette <ribosome@gentoo.org> -rebase-509.ebuild,
  -rebase-511.ebuild, -rebase-601.ebuild:
  Removed obsolete/buggy versions.

*rebase-601-r1 (21 Jan 2006)

  21 Jan 2006; Olivier Fisette <ribosome@gentoo.org> +rebase-601-r1.ebuild:
  Install an enzymes prototypes file, replacing the one distributed with
  EMBOSS. This will solve the inconsistencies reported in bug #118832.

  18 Jan 2006; Markus Rothe <corsair@gentoo.org> rebase-512.ebuild:
  Stable on ppc64; bug #118832

  15 Jan 2006; Marcus D. Hanwell <cryos@gentoo.org> rebase-512.ebuild: