@@ -1,6 +1,7 @@
 DIST rebase-601.tar.bz2 181829
 DIST rebase-603.tar.bz2 182746
 DIST rebase-604.tar.bz2 182610
+DIST rebase-606.tar.bz2 183617 RMD160 7dea5a428a797b359c5bd34c698f093927a94be0 SHA1 36dbf47c2647b1cf676ce55ed561db1e439e6e6e SHA256 13ccca9937b7053ddda2f1cdeac88cc39eb5938540507089ff249d30f403244e
 EBUILD rebase-601-r1.ebuild 1355 RMD160 4c82189c82c7bdd8ea3c9cb88f66dc40b9a665f6 SHA1 2d7ad73f5c8017eaf47a413692170ea39a06d2f4 SHA256 d045583304fc5bb4894e817d40e70702d62d6464a7b189a3fd1b2bafbd0f374e
 MD5 e21bd3a6974c61c4c0328f66719200a4 rebase-601-r1.ebuild 1355
 RMD160 4c82189c82c7bdd8ea3c9cb88f66dc40b9a665f6 rebase-601-r1.ebuild 1355
@@ -13,10 +14,14 @@ EBUILD rebase-604.ebuild 1360 RMD160 6fd5de944c4296db90c83b4255494f5f5c2789dc SH
 MD5 0f4df2456dcc342843c90c6f68656a54 rebase-604.ebuild 1360
 RMD160 6fd5de944c4296db90c83b4255494f5f5c2789dc rebase-604.ebuild 1360
 SHA256 0f6957a5bf149b84c9516a5174ffe7b681443810438dc525b720366c79982391 rebase-604.ebuild 1360
-MISC ChangeLog 8868 RMD160 8860dc462485868b86e1e9eeff5971024577e34f SHA1 eb12737e18de148e614a8755fe1f9dbdbe967079 SHA256 01a7ca4a7dd33ac33b4d847934818cd909d442f8a2eb9411b8aced53d3d16165
-MD5 83e23112ef8228f193fbb577e2c1db4e ChangeLog 8868
-RMD160 8860dc462485868b86e1e9eeff5971024577e34f ChangeLog 8868
-SHA256 01a7ca4a7dd33ac33b4d847934818cd909d442f8a2eb9411b8aced53d3d16165 ChangeLog 8868
+EBUILD rebase-606.ebuild 1360 RMD160 5b325fe19d2ef9608575e29e268d88ebc08e327b SHA1 70863a56913039e8c3d63342e09d94b761606308 SHA256 55536e573dac65b6018b46baa8909f3c7455312c41ff0773e1a05c667c6b17f0
+MD5 6851d8abca534cfd01959048acddfcaf rebase-606.ebuild 1360
+RMD160 5b325fe19d2ef9608575e29e268d88ebc08e327b rebase-606.ebuild 1360
+SHA256 55536e573dac65b6018b46baa8909f3c7455312c41ff0773e1a05c667c6b17f0 rebase-606.ebuild 1360
+MISC ChangeLog 8995 RMD160 da0d615fbefe0ea520b08573d7afb702b0c616af SHA1 222dad9e1e01b475bd5f9abeba8b0ad618d58c2f SHA256 13d143ba54dda5eba48d7ca7426263a58b1e8f36ae613ce5cfb35fe839f557d8
+MD5 c18863be417a1d250e254433118ee7d0 ChangeLog 8995
+RMD160 da0d615fbefe0ea520b08573d7afb702b0c616af ChangeLog 8995
+SHA256 13d143ba54dda5eba48d7ca7426263a58b1e8f36ae613ce5cfb35fe839f557d8 ChangeLog 8995
 MISC metadata.xml 900 RMD160 6124f8e0fba32951daaba2f52d7f6f0f00233b2d SHA1 b1ff1b489c8db8427864057a89d02856a999e3b8 SHA256 e947dfc382096458c2183dc90fe7add203f8a6d86ccdfea668176451d58e2e7d
 MD5 550f8d428f3e75690b43d32df6aa60cd metadata.xml 900
 RMD160 6124f8e0fba32951daaba2f52d7f6f0f00233b2d metadata.xml 900
@@ -30,3 +35,6 @@ SHA256 0fa55cf80a22d454b2a5498e1badddc10a86bbaf3a35c33975192e15384c12c6 files/di
 MD5 4f02d3bb980067219d3f02f90b16ad01 files/digest-rebase-604 63
 RMD160 5c8ab7ec03808c11f7f1cd5276dbc89d7f2e4d7d files/digest-rebase-604 63
 SHA256 15e1dff1536b50675661aafeb1a55369743bcbc3ef3f6ec59ec8a69c4b891d32 files/digest-rebase-604 63
+MD5 5577905bb984b48a1688f568a97c9e6c files/digest-rebase-606 235
+RMD160 aa73ec3d351a0c242d6a0f8907f87992b078a037 files/digest-rebase-606 235
+SHA256 b8daf99ca7504c3cc4ae2392ec08e7fc7d9974fdff0fc86b57d3678a3e3350e8 files/digest-rebase-606 235
