@@ -1,6 +1,11 @@
 # ChangeLog for sci-biology/rebase
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-biology/rebase/ChangeLog,v 1.65 2006/05/24 20:45:09 hansmi Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-biology/rebase/ChangeLog,v 1.66 2006/06/26 15:47:49 ribosome Exp $
+
+*rebase-606 (26 Jun 2006)
+
+  26 Jun 2006; Olivier Fisette <ribosome@gentoo.org> +rebase-606.ebuild:
+  New upstream version.
 
   24 May 2006; Michael Hanselmann <hansmi@gentoo.org> rebase-603.ebuild:
   Stable on ppc.
